Se activa loader en pagina de juego.

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header class="header">
-	<!-- <div class="loader">
+	<div class="loader">
 		<div class="wrapper">
 			<div class="circle"></div>
 			<div class="circle"></div>
@@ -29,70 +29,70 @@
 			</div>
 			</div>
 		</div>      
-	</div> -->
-      <section class="container-nav-bar">
-        <nav class="bar-nav">     
-            <div class="img-logo">
-              <img src="../img/icons/Img-Logo.svg" alt="logo WASD games" class="logo">
-            </div>          
-            <input type="checkbox" id="check">
-            <label for="check" class="bar-btn">
-              <div id="nav-icon-left" class="nav-icon">
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>
-            </label>
-            <ul class="nav-menu">
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed"><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Home.svg" alt="home button"></div><a href="../index.html"><h3>Home</h3></a></div></label>
-              </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Accion.svg" alt="Accion button"></div><h3>Accion</h3></div></label>
-              </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Aventura.svg" alt="Aventura & RPG button"></div><h3>Aventura & RPG</h3></div></label>
-              </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Clasicos.svg" alt="Clasicos button"></div><h3>Clasicos</h3></div></label>
-              </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Deportes.svg" alt="Deportes & Carreras button"></div><h3>Deportes & Carreras</h3></div></label>
-              </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Estrategia.svg" alt="Estrategia & Defensa button"></div><h3>Estrategia & Defensa</h3></div></label>
-              </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Multiplayer.svg" alt="Multijugador button"></div><h3>Multijugador</h3></div></label>
-              </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Novedades.svg" alt="Novedades button"></div><a href="./batalla-por-el-medio-oeste.html"><h3>Novedades</h3></a></div></label>
-              </li>
-            </ul>
-        </nav>  
-        <nav class="header-search-bar">
-            <div class="input-buscar">
-              <input class="input-box-buscar" type="text" placeholder="Buscar en el sitio">
-              <img src="../img/icons/Icon-Lupa.svg" alt="Buscar" class="input-icon">
-            </div>
-         
-        </nav>
-        <nav class="usr-nav">
-            <div class="usr-name"><h2>¡Hola Mauro!</h2></div>
-            <div id="nav-icon-right" class="nav-icon">
-				<img src="../img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
-            </div>
-            <div id="nav-menu-usr" class="nav-menu-usr hidden">
-              <div class="avatar-img"><img src="../img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
-              <ul>
-                <li><a href="#"><img src="../img/icons/Icon-Profile.svg" alt="Perfil"> Perfil</href></a></li>
-                <li><a href="#"><img src="../img/icons/Icon-Library.svg" alt="Libreria"> Biblioteca</href></a></li>
-                <li><a href="#"><img src="../img/icons/Icon-Friends.svg" alt="Amigos"> Amigos</href></a></li>
-              </ul>
-              <button class="button-small-primary" role="button"><a href=""><h3>Logout</h3></a></button>
-            </div>
-          </nav>
-      </section> 
+	</div>
+	<section class="container-nav-bar">
+	<nav class="bar-nav">     
+		<div class="img-logo">
+			<img src="../img/icons/Img-Logo.svg" alt="logo WASD games" class="logo">
+		</div>          
+		<input type="checkbox" id="check">
+		<label for="check" class="bar-btn">
+			<div id="nav-icon-left" class="nav-icon">
+			<span></span>
+			<span></span>
+			<span></span>
+			</div>
+		</label>
+		<ul class="nav-menu">
+			<li><input id="check-menu-deployed" type="checkbox">
+			<label for="check-menu-deployed"><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Home.svg" alt="home button"></div><a href="../index.html"><h3>Home</h3></a></div></label>
+			</li>
+			<li><input id="check-menu-deployed" type="checkbox">
+			<label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Accion.svg" alt="Accion button"></div><h3>Accion</h3></div></label>
+			</li>
+			<li><input id="check-menu-deployed" type="checkbox">
+			<label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Aventura.svg" alt="Aventura & RPG button"></div><h3>Aventura & RPG</h3></div></label>
+			</li>
+			<li><input id="check-menu-deployed" type="checkbox">
+			<label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Clasicos.svg" alt="Clasicos button"></div><h3>Clasicos</h3></div></label>
+			</li>
+			<li><input id="check-menu-deployed" type="checkbox">
+			<label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Deportes.svg" alt="Deportes & Carreras button"></div><h3>Deportes & Carreras</h3></div></label>
+			</li>
+			<li><input id="check-menu-deployed" type="checkbox">
+			<label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Estrategia.svg" alt="Estrategia & Defensa button"></div><h3>Estrategia & Defensa</h3></div></label>
+			</li>
+			<li><input id="check-menu-deployed" type="checkbox">
+			<label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Multiplayer.svg" alt="Multijugador button"></div><h3>Multijugador</h3></div></label>
+			</li>
+			<li><input id="check-menu-deployed" type="checkbox">
+			<label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Novedades.svg" alt="Novedades button"></div><a href="./batalla-por-el-medio-oeste.html"><h3>Novedades</h3></a></div></label>
+			</li>
+		</ul>
+	</nav>  
+	<nav class="header-search-bar">
+		<div class="input-buscar">
+			<input class="input-box-buscar" type="text" placeholder="Buscar en el sitio">
+			<img src="../img/icons/Icon-Lupa.svg" alt="Buscar" class="input-icon">
+		</div>
+		
+	</nav>
+	<nav class="usr-nav">
+		<div class="usr-name"><h2>¡Hola Mauro!</h2></div>
+		<div id="nav-icon-right" class="nav-icon">
+			<img src="../img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
+		</div>
+		<div id="nav-menu-usr" class="nav-menu-usr hidden">
+			<div class="avatar-img"><img src="../img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
+			<ul>
+			<li><a href="#"><img src="../img/icons/Icon-Profile.svg" alt="Perfil"> Perfil</href></a></li>
+			<li><a href="#"><img src="../img/icons/Icon-Library.svg" alt="Libreria"> Biblioteca</href></a></li>
+			<li><a href="#"><img src="../img/icons/Icon-Friends.svg" alt="Amigos"> Amigos</href></a></li>
+			</ul>
+			<button class="button-small-primary" role="button"><a href=""><h3>Logout</h3></a></button>
+		</div>
+		</nav>
+	</section> 
     </header>
 	<main>
 		<nav class="breadcrumbs">
@@ -409,7 +409,7 @@
           </div>
         </div>
     </footer> 
-	<!-- <script src="../js/loader.js"></script> -->
+	<script src="../js/loader.js"></script>
     <script src="../js/burgermenu.js"></script> 
     <script src="../js/movimientoCarrusel.js"></script>
     <script src="../js/game/Chip.js"></script>
