Animacion carrusel, se cambia history section

--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -75,7 +75,7 @@
           </nav>
       </section> 
     </header>
-    <div class="loader">
+   <!--  <div class="loader">
       <div class="wrapper">
         <div class="circle"></div>
         <div class="circle"></div>
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>      
-    </div>
+    </div> -->
     <section id="modalContainerMensaje" class="modalContainerMensaje ocultar">
       <div class="modalMsge">
           <h2>Informacion de pago</h2>
@@ -155,7 +155,7 @@
             </div>
         </div>
         <div class="history-chart">
-            <div class="history-title"><h1>Historia</h1></div>
+            <!-- <div class="history-title"><h1>Historia</h1></div>
              <div class="history-text">
               <h3>En una tierra sin ley, quien tenga mas balas y mejores armas manda.
                 Los bandidos mas odiados se deberan enfrentar en una batalla sin cuartel por el dominio del desierto de Nuevo Mexico.
@@ -163,7 +163,36 @@
                 La lista de pretendientes al trono es grande y solo uno sera el ganador.
                 ¿Sera acaso “El Mono”?, jefe del clan de Mexicanos, ¿sera “Mina”? la rubia reina del norte, ¿o tal vez “El Juez”?, el inmoral impartidor de la ley...
                 Los duelos van a comenzar, elige bien, y preparate para reinar...</h3>
-             </div>
+             </div> -->
+
+             <section class="history-wrapper">
+              <div class="history-title" id="about">
+                  <h2>History</h2>
+                  <div id="logo"><img src="../img/img-games/hero-section/El Juez.png" alt="" id="scrollLogo"></div>
+              </div>
+              <div class="history-scroll">
+                  <div>
+                      
+                      <h3>En una tierra sin ley, quien tenga mas balas y mejores armas manda.
+                        Los bandidos mas odiados se deberan enfrentar en una batalla sin cuartel por el dominio del desierto de Nuevo Mexico.
+                      </h3>
+                  </div>
+                  <div>                      
+                      <h3>Los jefes de las bandas de forajidos mas grandes estan llegando al desierto y la batalla esta por empezar.
+                        La lista de pretendientes al trono es grande y solo uno sera el ganador.
+                      </h3>
+                  </div>
+                  <div>
+                      <h3>¿Sera acaso “El Mono”?, jefe del clan de Mexicanos, ¿sera “Mina”? la rubia reina del norte, ¿o tal vez “El Juez”?, el inmoral impartidor de la ley...
+                        Los duelos van a comenzar, elige bien, y preparate para reinar...
+                      </h3>
+                  </div>
+              </div>
+          </section>
+
+
+
+
         </div>
         <div class="characters-chart">
           <section class="carruseles-categorias-character contenedor-categoria" id="character">
@@ -424,6 +453,6 @@
     <script src="../js/loader.js"></script>
     <script src="../js/burgermenu.js"></script> 
     <script src="../js/movimientoCarrusel.js"></script>     
-  
+    <script src="../temp/split-screen2.js"></script>
 </body>
 </html>
