--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -15,39 +15,36 @@
         <nav class="bar-nav">     
             <div class="img-logo">
               <img src="../img/icons/Img-Logo.svg" alt="logo WASD games" class="logo">
-            </div>          
-            <input type="checkbox" id="check">
-            <label for="check" class="bar-btn">
-              <div id="nav-icon-left" class="nav-icon">
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>
-            </label>
-            <ul class="nav-menu">
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed"><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Home.svg" alt="home button"></div><a href="../index.html"><h3>Home</h3></a></div></label>
+            </div>
+            <div id="nav-icon-left" class="nav-icon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <ul id="nav-menu" class="nav-menu hiddenn">
+              <li>
+                <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Home.svg" alt="home button"></div><a href="../index.html"><h3>Home</h3></a></div>
               </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Accion.svg" alt="Accion button"></div><h3>Accion</h3></div></label>
+              <li>
+                <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Accion.svg" alt="Accion button"></div><h3>Accion</h3></div>
               </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Aventura.svg" alt="Aventura & RPG button"></div><h3>Aventura & RPG</h3></div></label>
+              <li>
+                <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Aventura.svg" alt="Aventura & RPG button"></div><h3>Aventura & RPG</h3></div>
               </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Clasicos.svg" alt="Clasicos button"></div><h3>Clasicos</h3></div></label>
+              <li>
+                <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Clasicos.svg" alt="Clasicos button"></div><h3>Clasicos</h3></div>
               </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Deportes.svg" alt="Deportes & Carreras button"></div><h3>Deportes & Carreras</h3></div></label>
+              <li>
+                <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Deportes.svg" alt="Deportes & Carreras button"></div><h3>Deportes & Carreras</h3></div>
               </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Estrategia.svg" alt="Estrategia & Defensa button"></div><h3>Estrategia & Defensa</h3></div></label>
+              <li>
+                <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Estrategia.svg" alt="Estrategia & Defensa button"></div><h3>Estrategia & Defensa</h3></div>
               </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Multiplayer.svg" alt="Multijugador button"></div><h3>Multijugador</h3></div></label>
+              <li>
+                <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Multiplayer.svg" alt="Multijugador button"></div><h3>Multijugador</h3></div>
               </li>
-              <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Novedades.svg" alt="Novedades button"></div><h3>Novedades</h3></div></label>
+              <li>
+                <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Novedades.svg" alt="Novedades button"></div><h3>Novedades</h3></div>
               </li>
             </ul>
         </nav>  
