Animacion de cards personajes

--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -160,23 +160,23 @@
              <section class="history-wrapper">
               <div class="history-title" id="about">
                   <!-- <h2>History</h2> -->
-                  <div id="logo">
-                    <img src="../img/img-games/hero-section/El Juez.png" alt="" id="scrollLogo">
+                  <div class="scrollimg">
+                    <img src="../img/img-games/hero-section/El Juez.png" alt="" id="scrollimg">
                   </div>
               </div>
               <div class="history-scroll">
-                  <div class="history-paragraph-1">
+                  <div class="history-paragraph-1 his-par">
                       
                       <h3>En una tierra sin ley, quien tenga mas balas y mejores armas manda.
                         Los bandidos mas odiados se deberan enfrentar en una batalla sin cuartel por el dominio del desierto de Nuevo Mexico.
                       </h3>
                   </div>
-                  <div class="history-paragraph-2">                      
+                  <div class="history-paragraph-2 his-par">                      
                       <h3>Los jefes de las bandas de forajidos mas grandes estan llegando al desierto y la batalla esta por empezar.
                         La lista de pretendientes al trono es grande y solo uno sera el ganador.
                       </h3>
                   </div>
-                  <div class="history-paragraph-3">
+                  <div class="history-paragraph-3 his-par">
                       <h3>¿Sera acaso “El Mono”?, jefe del clan de Mexicanos, ¿sera “Mina”? la rubia reina del norte, ¿o tal vez “El Juez”?, el inmoral impartidor de la ley...
                         Los duelos van a comenzar, elige bien, y preparate para reinar...
                       </h3>
@@ -194,7 +194,7 @@
             </div>                    
             <div class="contenedor-carrusel-character">
               <ul class="carrusel carrusel-characters">
-                <li class="juego-character character-layer1">
+                <li class="juego-character">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                         <div class="indicador-estado-character"></div>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character character-layer2">
+                <li class="juego-character">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character character-layer3">
+                <li class="juego-character">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -239,7 +239,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character character-layer4">
+                <li class="juego-character">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -254,7 +254,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="juego-character character-layer5">
+                <li class="juego-character">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -268,7 +268,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character character-layer6">
+                <li class="juego-character">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -283,7 +283,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character character-layer7">
+                <li class="juego-character">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -298,7 +298,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character character-layer8">
+                <li class="juego-character">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
