--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -152,38 +152,37 @@
             </div>
         </div>
         <div class="history-chart">
-           
-
-             <section class="history-wrapper">
+          <section class="history-wrapper">
               <div class="history-title" id="about">
                   <!-- <h2>History</h2> -->
                   <div class="scrollimg">
-                    <img src="../img/img-games/hero-section/El Juez.png" alt="" id="scrollimg">
+                    <img src="../img/img-games/hero-section/hero-history-9.png" alt="" width="500" height="450" id="scrollimg">
                   </div>
               </div>
               <div class="history-scroll">
                   <div class="history-paragraph-1 his-par">
-                      
+                      <h2>Historia</h2>
+                      <br>
                       <h3>En una tierra sin ley, quien tenga mas balas y mejores armas manda.
-                        Los bandidos mas odiados se deberan enfrentar en una batalla sin cuartel por el dominio del desierto de Nuevo Mexico.
+                          Los bandidos mas odiados se enfrentaran en una batalla sin cuartel 
+                          por el dominio del desierto de Nuevo Mexico.
+                          Y quien gane la batalla sera el nuevo rey.
                       </h3>
                   </div>
                   <div class="history-paragraph-2 his-par">                      
-                      <h3>Los jefes de las bandas de forajidos mas grandes estan llegando al desierto y la batalla esta por empezar.
-                        La lista de pretendientes al trono es grande y solo uno sera el ganador.
+                      <h3>Los jefes de las bandas de forajidos mas grandes estan llegando al 
+                          y la batalla esta por comenzar.
+                          La lista de pretendientes al trono es grande y solo uno sera el ganador.
                       </h3>
                   </div>
                   <div class="history-paragraph-3 his-par">
-                      <h3>¿Sera acaso “El Mono”?, jefe del clan de Mexicanos, ¿sera “Mina”? la rubia reina del norte, ¿o tal vez “El Juez”?, el inmoral impartidor de la ley...
-                        Los duelos van a comenzar, elige bien, y preparate para reinar...
+                      <h3>¿Quien sera el nuevo mandamas?, ¿sera acaso “El Mono”?, jefe del clan de Mexicanos; 
+                          ¿sera “Mina”? la rubia reina del norte; ¿o tal vez “El Juez”?, el inmoral impartidor de la ley...
+                          Los duelos estan por comenzar, elige bien, y preparate para reinar...
                       </h3>
                   </div>
               </div>
           </section>
-
-
-
-
         </div>
         <div class="characters-chart">          
             <div class="contenedor-characters-title">
@@ -335,7 +334,7 @@
             <div class="container-features-2">            
               <div class="feature-container-b">
                 <div class="feature-text-a">
-                  <div class="feature-title"><h3>Firs Person Shooter</h3></div>
+                  <div class="feature-title"><h3>First Person Shooter</h3></div>
                   <div class="feature-p"><p>Sistema de cadencia realista. Apunta y dispara. Las armas de los personajes pueden evolucionar.</p></div>
                 </div>
                 <div class="feature-img"><img src="../img/img-games/hero-section/img FPS.png" alt="Progresion de personajes"></div>
@@ -352,19 +351,28 @@
               <div class="feature-container-a">
                 <div class="feature-text">
                   <div class="feature-title"><h3>Multijugador en linea</h3></div>
-                  <div class="feature-p"><p>Diviertete con tus amigos, o conoce nuevos. Cuanto mas jugadores, mejor dinamica de juego.</p></div>
+                  <div class="feature-p"><p>Diviertete con tus amigos, o conoce nuevos. Cuanto mas jugadores, mejor dinámica de juego.</p></div>
                 </div>
                 <div class="feature-img"><img src="../img/img-games/hero-section/img multijugador online.png" alt="Multijuagador en linea"></div>
               </div>
               <div class="feature-container-a">
                 <div class="feature-text-a">
                   <div class="feature-title"><h3>Multiplataforma</h3></div>
-                  <div class="feature-p"><p>Juega desde tu PC, Playstation, XBox, Nintendo Switch o cualquier dispositivo movil. </p></div>
+                  <div class="feature-p"><p>Juega desde tu PC, Playstation, XBox, Nintendo Switch o cualquier otro dispositivo movil. </p></div>
                 </div>
                 <div class="feature-img"><img src="../img/img-games/hero-section/img multi plataforma.png" alt="Multiplataforma"></div>
               </div>
             </div>
-        </div> 
+        </div>
+        <div class="sprite-chart">     
+          <div id="sprite-back">
+            <div id="sprite-subback">
+                <div id="sprite-floor">
+                    <div id="sprite"></div>
+                </div>
+            </div>
+          </div>
+        </div>
     </div>
     <footer class="footer">
         <div class="contenedor-ppal-footer">
