--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -502,7 +502,7 @@
     <script src="../js/loader.js"></script>
     <script src="../js/burgermenu.js"></script> 
     <script src="../js/movimientoCarrusel.js"></script>     
-    <script src="../js/split-screen2.js"></script>
+    <script src="../js/split-screen.js"></script>
     <script src="../js/countDownTimer.js"></script>
 </body>
 </html>
