--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -138,9 +138,10 @@
     <div class="main-hero-page">
       <div class="hero-chart-parallax">         
         <div id="hero-chart-back" class="layer"></div>             
-        <div id="hero-clouds-1" class="layer"></div>                                       
+        <div id="hero-clouds-1" class="layer"></div>  
+        <div class="hero-title"><h1>Batalla por el medio oeste</h1></div>                                      
         <div id="hero-chart-subback" class="layer"></div> 
-        <div class="hero-title"><h1>Batalla por el medio oeste</h1></div>       
+              
         <div id="hero-clouds-2" class="layer"></div>        
         <div id="hero-sand-storm-1" class="layer"></div>
         <div id="hero-sand-storm-2" class="layer"></div>       
@@ -498,6 +499,7 @@
     <script src="../js/movimientoCarrusel.js"></script>     
     <script src="../js/split-screen.js"></script>
     <script src="../js/countDownTimer.js"></script>
+    <!-- <script src="../js/heroTitleAnimation.js"></script> -->
     <script src="../js/heroTitleAnimation.js"></script>
 </body>
 </html>
