--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -262,14 +262,21 @@
             </div>
           </div>
         </section>
-        <div id="sprite"></div>
+        <section>
+          <div id="sprite-back">
+            <div id="sprite-floor" class="layer">
+              <div id="sprite"></div>
+            </div>
+          </div>
+          
+        </section>
         <div class="characters-chart">          
             <div class="contenedor-characters-title">
               <h1 class="characters-title">Los Contendientes</h1>
             </div>                    
             <div class="contenedor-carrusel-character">
               <ul class="carrusel carrusel-characters">
-                <li class="juego-character">
+                <li class="juego-character 1">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                         <div class="indicador-estado-character"></div>
@@ -284,7 +291,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character">
+                <li class="juego-character 2">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -299,7 +306,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character">
+                <li class="juego-character 3">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -314,7 +321,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character">
+                <li class="juego-character 4">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -329,7 +336,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="juego-character">
+                <li class="juego-character 5">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -343,7 +350,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character">
+                <li class="juego-character 6">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -358,7 +365,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character">
+                <li class="juego-character 7">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -373,7 +380,7 @@
                     </div>
                 </div>
                 </li>
-                <li class="juego-character">
+                <li class="juego-character 8">
                   <div class="contenedor-card-small-character">
                     <div class="card-small-character">
                       <div class="indicador-estado-character"></div>
@@ -499,7 +506,7 @@
     <script src="../js/movimientoCarrusel.js"></script>     
     <script src="../js/split-screen.js"></script>
     <script src="../js/countDownTimer.js"></script>
-    <!-- <script src="../js/heroTitleAnimation.js"></script> -->
+    <script src="../js/cardsAnimation.js"></script>
     <script src="../js/heroTitleAnimation.js"></script>
 </body>
 </html>
