--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -397,54 +397,48 @@
             </div>    
         </div>
         <div class="features-chart">
-            <div class="features-chart-title"><h1>Features</h1></div>
-            <div class="container-features-1">
-              <div class="feature-container-a ">
-                <div class="feature-text div-1">
-                  <div class="feature-title"><h3>Modo historia</h3></div>
-                  <div class="feature-p"><p>Tres campañas disponibles, elige el bando que mas te guste y pasa el rato con tus amigos.</p></div>
-                </div>
-                <div class="feature-img"><img src="../img/img-games/hero-section/img modo historia.png" alt="Modo historia"></div>
+            <h1 class="features-chart-title">Features</h1>
+            <div class="feature-text feature-1">
+              <div>
+                <h3 class="feature-title">Modo historia</h3>
+                <p class="feature-p">Tres campañas disponibles, elige el bando que mas te guste y pasa el rato con tus amigos.</p>
               </div>
-              <div class="feature-container-a ">
-                <div class="feature-text-a div-2">
-                  <div class="feature-title"><h3>Progresion de personajes</h3></div>
-                  <div class="feature-p"><p>Personajes personalizados, adquiere nuevas habilidades y mejora la capacidad de pelea.</p></div>
-                </div>
-                <div class="feature-img"><img src="../img/img-games/hero-section/img progresion personajes.png" alt="Progresion de personajes"></div>
-              </div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img modo historia.png" alt="Modo historia"></div>
             </div>
-            <div class="container-features-2">            
-              <div class="feature-container-b ">
-                <div class="feature-text-a div-1">
-                  <div class="feature-title"><h3>First Person Shooter</h3></div>
-                  <div class="feature-p"><p>Sistema de cadencia realista. Apunta y dispara. Las armas de los personajes pueden evolucionar.</p></div>
-                </div>
-                <div class="feature-img"><img src="../img/img-games/hero-section/img FPS.png" alt="Progresion de personajes"></div>
+            <div class="feature-text feature-2">
+              <div>
+                <h3 class="feature-title">Progresion de personajes</h3>
+                <p class="feature-p">Personajes personalizados, adquiere nuevas habilidades y mejora la capacidad de pelea.</p>
               </div>
-              <div class="feature-container-b ">
-                <div class="feature-text div-2">
-                  <div class="feature-title"><h3>Mundo hiperrealista</h3></div>
-                  <div class="feature-p"><p>Mapa explorable. Visita las distintas zonas y escenarios. Visualizacion de 360°.</p></div>
-                </div>
-                <div class="feature-img"><img src="../img/img-games/hero-section/img mundo 3d.png" alt="Mundo hiperrealista"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img progresion personajes.png" alt="Progresion de personajes"></div>
+            </div>
+            <div class="feature-text feature-3">
+              <div>
+                <h3 class="feature-title">First Person Shooter</h3>
+                <p class="feature-p">Sistema de cadencia realista. Apunta y dispara. Las armas de los personajes pueden evolucionar.</p>
               </div>
-            </div>       
-            <div class="container-features-3">
-              <div class="feature-container-a">
-                <div class="feature-text  div-1">
-                  <div class="feature-title"><h3>Multijugador en linea</h3></div>
-                  <div class="feature-p"><p>Diviertete con tus amigos, o conoce nuevos. Cuanto mas jugadores, mejor dinámica de juego.</p></div>
-                </div>
-                <div class="feature-img"><img src="../img/img-games/hero-section/img multijugador online.png" alt="Multijuagador en linea"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img FPS.png" alt="Progresion de personajes"></div>
+            </div>
+            <div class="feature-text feature-4">
+              <div>
+                <h3 class="feature-title">Mundo hiperrealista</h3>
+                <p class="feature-p">Mapa explorable. Visita las distintas zonas y escenarios. Visualizacion de 360°.</p>
               </div>
-              <div class="feature-container-a ">
-                <div class="feature-text-a div-2">
-                  <div class="feature-title"><h3>Multiplataforma</h3></div>
-                  <div class="feature-p"><p>Juega desde tu PC, Playstation, XBox, Nintendo Switch o cualquier otro dispositivo movil. </p></div>
-                </div>
-                <div class="feature-img"><img src="../img/img-games/hero-section/img multi plataforma.png" alt="Multiplataforma"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img mundo 3d.png" alt="Mundo hiperrealista"></div>
+            </div>
+            <div class="feature-text feature-5">
+              <div>
+                <h3 class="feature-title">Multijugador en linea</h3>
+                <p class="feature-p">Diviertete con tus amigos, o conoce nuevos. Cuanto mas jugadores, mejor dinámica de juego.</p>
               </div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img multijugador online.png" alt="Multijuagador en linea"></div>
+            </div>
+            <div class="feature-text feature-6">
+              <div>
+                <h3 class="feature-title">Multiplataforma</h3>
+                <p class="feature-p">Juega desde tu PC, Playstation, XBox, Nintendo Switch o cualquier otro dispositivo movil.</p>
+              </div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img multi plataforma.png" alt="Multiplataforma"></div>
             </div>
         </div>       
     </div>
