--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -403,42 +403,42 @@
                 <h3>Modo historia</h3>
                 <p>Tres campañas disponibles, elige el bando que mas te guste y pasa el rato con tus amigos.</p>
               </div>
-              <div class="feature-img"><img src="../img/img-games/hero-section/img modo historia.png" alt="Modo historia"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img-feature-modoHistoria.png" alt="Modo historia"></div>
             </div>
             <div class="feature feature-2">
               <div class="feature-text">
                 <h3>Progresion de personajes</h3>
                 <p>Personajes personalizados, adquiere nuevas habilidades y mejora la capacidad de pelea.</p>
               </div>
-              <div class="feature-img"><img src="../img/img-games/hero-section/img progresion personajes.png" alt="Progresion de personajes"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img-feature-progresion.png" alt="Progresion de personajes"></div>
             </div>
             <div class="feature feature-3">
               <div class="feature-text">
                 <h3>First Person Shooter</h3>
                 <p>Sistema de cadencia realista. Apunta y dispara. Las armas de los personajes pueden evolucionar.</p>
               </div>
-              <div class="feature-img"><img src="../img/img-games/hero-section/img FPS.png" alt="Progresion de personajes"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img-feature-FPS.png" alt="Progresion de personajes"></div>
             </div>
             <div class="feature feature-4">
               <div class="feature-text">
                 <h3>Mundo hiperrealista</h3>
                 <p>Mapa explorable. Visita las distintas zonas y escenarios. Visualizacion de 360°.</p>
               </div>
-              <div class="feature-img"><img src="../img/img-games/hero-section/img mundo 3d.png" alt="Mundo hiperrealista"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img-feature-mundo.png" alt="Mundo hiperrealista"></div>
             </div>
             <div class="feature feature-5">
               <div class="feature-text">
                 <h3>Multijugador en linea</h3>
                 <p>Diviertete con tus amigos, o conoce nuevos. Cuanto mas jugadores, mejor dinámica de juego.</p>
               </div>
-              <div class="feature-img"><img src="../img/img-games/hero-section/img multijugador online.png" alt="Multijuagador en linea"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img-features-multijugador.png" alt="Multijuagador en linea"></div>
             </div>
             <div class="feature feature-6">
               <div class="feature-text">
                 <h3>Multiplataforma</h3>
                 <p>Juega desde tu PC, Playstation, XBox, Nintendo Switch o cualquier otro dispositivo movil.</p>
               </div>
-              <div class="feature-img"><img src="../img/img-games/hero-section/img multi plataforma.png" alt="Multiplataforma"></div>
+              <div class="feature-img"><img src="../img/img-games/hero-section/img-features-multiplataforma.png" alt="Multiplataforma"></div>
             </div>
         </div>       
     </div>
