--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -72,7 +72,7 @@
           </nav>
       </section> 
     </header>
-   <!--  <div class="loader">
+    <div class="loader">
       <div class="wrapper">
         <div class="circle"></div>
         <div class="circle"></div>
@@ -88,7 +88,7 @@
           </div>
         </div>
       </div>      
-    </div> -->
+    </div>
     <section id="modalContainerMensaje" class="modalContainerMensaje ocultar">
       <div class="modalMsge">
           <h2>Informacion de pago</h2>
@@ -490,14 +490,14 @@
           </div>
         </div>
     </footer>    
-    <!-- <script src="../js/loader.js"></script> -->
-    <!-- <script src="../js/burgermenu.js"></script> 
+    <script src="../js/loader.js"></script>
+    <script src="../js/burgermenu.js"></script> 
     <script src="../js/header.js"></script> 
     <script src="../js/carruselMovement.js"></script>     
-    <script src="../js/split-screen.js"></script> -->
+    <script src="../js/split-screen.js"></script>
     <script src="../js/Features.js"></script>
-    <!-- <script src="../js/countDownTimer.js"></script>
+    <script src="../js/countDownTimer.js"></script>
     <script src="../js/cardsAnimation.js"></script>
-    <script src="../js/heroTitleAnimation.js"></script> -->
+    <script src="../js/heroTitleAnimation.js"></script>
 </body>
 </html>
