Ruben varios 28nov

--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -72,7 +72,7 @@
           </nav>
       </section> 
     </header>
-    <div class="loader">
+    <div class="loader loader-hero">
       <div class="wrapper">
         <div class="circle"></div>
         <div class="circle"></div>
