--- a/Entregable4/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable4/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -23,7 +23,7 @@
 				<span></span>
 				<span></span>
 			  </div>
-			  <ul id="nav-menu" class="nav-menu hiddenn">
+			  <ul id="nav-menu" class="nav-menu side-hidden">
 				<li>
 				  <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Home.svg" alt="home button"></div><a href="../index.html"><h3>Home</h3></a></div>
 				</li>
@@ -62,7 +62,7 @@
 			  <div id="nav-icon-right" class="nav-icon">
 				<img src="../img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
 			  </div>
-			  <div id="nav-menu-usr" class="nav-menu-usr hidden">
+			  <div id="nav-menu-usr" class="nav-menu-usr side-hidden">
 				<div class="avatar-img"><img src="../img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
 				<ul>
 				  <li><a href="#"><img src="../img/icons/Icon-Profile.svg" alt="Perfil"> Perfil</href></a></li>
@@ -73,7 +73,7 @@
 			  </div>
 			</nav>
 		</section> 
-	</header>
+	  </header>
 	<div class="loader">
       <div class="wrapper">
         <div class="circle"></div>
