--- a/Entregable4/index.html
+++ b/Entregable4/index.html
@@ -14,58 +14,58 @@
     <section class="container-nav-bar">
       <nav class="bar-nav">     
           <div class="img-logo">
-            <img src="../img/icons/Img-Logo.svg" alt="logo WASD games" class="logo">
+            <img src="./img/icons/Img-Logo.svg" alt="logo WASD games" class="logo">
           </div>
           <div id="nav-icon-left" class="nav-icon">
             <span></span>
             <span></span>
             <span></span>
           </div>
-          <ul id="nav-menu" class="nav-menu hiddenn">
+          <ul id="nav-menu" class="nav-menu side-hidden">
             <li>
-              <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Home.svg" alt="home button"></div><a href="../index.html"><h3>Home</h3></a></div>
+              <div class="categoria"><div class="icon"><img src="./img/icons/Icon-Home.svg" alt="home button"></div><a href="../index.html"><h3>Home</h3></a></div>
             </li>
             <li>
-              <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Accion.svg" alt="Accion button"></div><h3>Accion</h3></div>
+              <div class="categoria"><div class="icon"><img src="./img/icons/Icon-Accion.svg" alt="Accion button"></div><h3>Accion</h3></div>
             </li>
             <li>
-              <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Aventura.svg" alt="Aventura & RPG button"></div><h3>Aventura & RPG</h3></div>
+              <div class="categoria"><div class="icon"><img src="./img/icons/Icon-Aventura.svg" alt="Aventura & RPG button"></div><h3>Aventura & RPG</h3></div>
             </li>
             <li>
               <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Clasicos.svg" alt="Clasicos button"></div><h3>Clasicos</h3></div>
             </li>
             <li>
-              <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Deportes.svg" alt="Deportes & Carreras button"></div><h3>Deportes & Carreras</h3></div>
+              <div class="categoria"><div class="icon"><img src="./img/icons/Icon-Deportes.svg" alt="Deportes & Carreras button"></div><h3>Deportes & Carreras</h3></div>
             </li>
             <li>
-              <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Estrategia.svg" alt="Estrategia & Defensa button"></div><h3>Estrategia & Defensa</h3></div>
+              <div class="categoria"><div class="icon"><img src="./img/icons/Icon-Estrategia.svg" alt="Estrategia & Defensa button"></div><h3>Estrategia & Defensa</h3></div>
             </li>
             <li>
-              <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Multiplayer.svg" alt="Multijugador button"></div><h3>Multijugador</h3></div>
+              <div class="categoria"><div class="icon"><img src="./img/icons/Icon-Multiplayer.svg" alt="Multijugador button"></div><h3>Multijugador</h3></div>
             </li>
             <li>
-              <div class="categoria"><div class="icon"><img src="../img/icons/Icon-Novedades.svg" alt="Novedades button"></div><h3>Novedades</h3></div>
+              <div class="categoria"><div class="icon"><img src="./img/icons/Icon-Novedades.svg" alt="Novedades button"></div><h3>Novedades</h3></div>
             </li>
           </ul>
       </nav>  
       <nav class="header-search-bar">
           <div class="input-buscar">
             <input class="input-box-buscar" type="text" placeholder="Buscar en el sitio">
-            <img src="../img/icons/Icon-Lupa.svg" alt="Buscar" class="input-icon">
+            <img src="./img/icons/Icon-Lupa.svg" alt="Buscar" class="input-icon">
           </div>
        
       </nav>
       <nav class="usr-nav">
           <div class="usr-name"><h2>¡Hola Mauro!</h2></div>
           <div id="nav-icon-right" class="nav-icon">
-            <img src="../img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
+            <img src="./img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
           </div>
-          <div id="nav-menu-usr" class="nav-menu-usr hidden">
-            <div class="avatar-img"><img src="../img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
+          <div id="nav-menu-usr" class="nav-menu-usr side-hidden">
+            <div class="avatar-img"><img src="./img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
             <ul>
-              <li><a href="#"><img src="../img/icons/Icon-Profile.svg" alt="Perfil"> Perfil</href></a></li>
-              <li><a href="#"><img src="../img/icons/Icon-Library.svg" alt="Libreria"> Biblioteca</href></a></li>
-              <li><a href="#"><img src="../img/icons/Icon-Friends.svg" alt="Amigos"> Amigos</href></a></li>
+              <li><a href="#"><img src="./img/icons/Icon-Profile.svg" alt="Perfil"> Perfil</href></a></li>
+              <li><a href="#"><img src="./img/icons/Icon-Library.svg" alt="Libreria"> Biblioteca</href></a></li>
+              <li><a href="#"><img src="./img/icons/Icon-Friends.svg" alt="Amigos"> Amigos</href></a></li>
             </ul>
             <button class="button-small-primary" role="button"><a href=""><h3>Logout</h3></a></button>
           </div>
