--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -146,14 +146,14 @@
           <div id="hero-sand-storm-2" class="layer"></div>       
           <div id="hero-chart-floor" class="layer"></div>
           <div class="hero-count-reserve">
-            <div class="time-counter">
+            <div class="time-counter side-column">
               <h2>Cada vez falta menos</h2>
               <h1 id="countdown"></h1>
             </div>
             <div class="hero-section-central-characters ">
               <img src="../img/img-games/hero-section/CowboyCalavera-1.png" alt="cowboy calavera" class="cow-bones"> 
             </div>          
-            <div class="button-preview">
+            <div class="button-preview side-column">
               <button class="btn">¡Reserva ya!</button>
             </div>
           </div>     
