--- a/Entregable4/pages/batalla-por-el-medio-oeste.html
+++ b/Entregable4/pages/batalla-por-el-medio-oeste.html
@@ -152,6 +152,9 @@
             </div>
             <div class="hero-section-central-characters ">
               <img src="../img/img-games/hero-section/CowboyCalavera-1.png" alt="cowboy calavera" class="cow-bones"> 
+             <section id="scroll-button" class="demo">
+                <span></span>
+              </section>
             </div>          
             <div class="button-preview side-column">
               <button class="btn">¡Reserva ya!</button>
